--- a/gameStyle.css
+++ b/gameStyle.css
@@ -20,10 +20,17 @@
 }
 
 #map {
+  transition: all 0.3s ease;
+}
+
+.map-normal {
     width: 300px;
     height: 200px;
 }
-
+.map-big {
+    width: 450px;
+    height: 300px;
+}
 #validate {
     display: block;
     margin-top: 5px;
